--- a/src/main/webapp/binaryOptimization.xhtml
+++ b/src/main/webapp/binaryOptimization.xhtml
@@ -2,8 +2,56 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:ui="http://java.sun.com/jsf/facelets"
       xmlns:f="http://java.sun.com/jsf/core"
+      xmlns:emcomp="http://xmlns.jcp.org/jsf/composite/emcomp"
       xmlns:h="http://java.sun.com/jsf/html">
 
 	<ui:composition template="googlePlotTemplate.xhtml">
+		<ui:define name="content">
+			<h:form target="main">
+				<h:selectOneMenu value="#{binaryOptimizationBean.selectedMix}" converter="#{hmc}">
+					<f:selectItems value="#{binaryOptimizationBean.hmList}"/>
+				</h:selectOneMenu>
+				<!-- <h:dataTable value="binaryOptimizationBean.getParameterList()" var="parameter">
+					<h:column>	
+						<f:facet name="header">
+							<h:outputText value="Parámetro" />
+						</f:facet>
+						<h:outputText value="#{parameter.name}" />
+					</h:column>
+					<h:column >
+                               <f:facet name="header">
+                                   <h:outputText value="Parámetro"/>
+                               </f:facet>
+                               <h:inputText value="#{parameter.value}" />
+                            </h:column>
+                            <h:column >
+                                <f:facet name="header">
+                                    <h:outputText value="fijo"/>  
+                                </f:facet>
+                                <h:selectBooleanCheckbox  value="#{parameter.fix}"/>
+                            </h:column>
+                             <h:column >
+                                <f:facet name="header">
+                                    <h:outputText value="Restricción en variación"/>  
+                                </f:facet>
+                                <h:selectBooleanCheckbox  value="#{parameter.constrain}"/>
+                            </h:column>
+                            <h:column  >
+                                <f:facet name="header">
+                                    <h:outputText value="Máxima variación"/>  
+                                </f:facet>
+                                <h:inputText value="#{parameter.maxVariation}"/>
+                            </h:column>
+                            <f:facet name="footer" >
+                            	<f:ajax render="@form">
+                                	<h:commandButton  value="Restablecer parámetros a cero"
+                                         action="#{binaryOptimizationBean.resetParametersToZero()}"/>
+                             	</f:ajax>
+                            </f:facet>
+				</h:dataTable>
+				 -->
+				
+			</h:form>
+		</ui:define>
 	</ui:composition>
 </html>
