--- a/src/main/webapp/welcome.xhtml
+++ b/src/main/webapp/welcome.xhtml
@@ -73,7 +73,7 @@
 				</ul>
 				<ul>
 					<li><h3>
-						<h:commandLink action="alphaOptimization" 
+						<h:commandLink action="binaryOptimization" 
 						value="Parámetros binarios"  target="main"/>
 					</h3></li>
 				</ul>
