--- a/src/main/webapp/fugacity.xhtml
+++ b/src/main/webapp/fugacity.xhtml
@@ -8,6 +8,7 @@
 
 	<ui:composition template="template.xhtml">
 		<ui:define name="content">
+		<h2><h:outputText value="Fugacidad-Presión-Temperatura"/></h2>
 			<h:form target="plotFrame">
 			<f:ajax render="@form">
 				<emcomp:homogeneous />
