--- a/src/main/webapp/pressure.xhtml
+++ b/src/main/webapp/pressure.xhtml
@@ -6,7 +6,7 @@
        xmlns:emcomp="http://xmlns.jcp.org/jsf/composite/emcomp">   
 	<ui:composition template="template.xhtml">
 		<ui:define name="content">
-			
+			<h2><h:outputText value="Presión-Volumen-Temperatura"/></h2>
 			<h:form target="plotFrame" >
 				<emcomp:homogeneous />
 							
