--- a/src/main/webapp/enthalpy.xhtml
+++ b/src/main/webapp/enthalpy.xhtml
@@ -7,6 +7,7 @@
 
 	<ui:composition template="template.xhtml">
 		<ui:define name="content">
+		<h2><h:outputText value="Temperature-Entalpía-Presión"/></h2>
 			<h:form target="plotFrame">
 				<emcomp:homogeneous/>
 				<h:commandButton action="#{enthalpyBean.enthalpyPlot()}" value="Graficar" />
