--- a/src/main/webapp/webGLPlotTemplate.xhtml
+++ b/src/main/webapp/webGLPlotTemplate.xhtml
@@ -25,6 +25,7 @@
 	<h:body> 
 		<ui:insert name="content">
 			 <div id="ThreeJS" style="position: absolute; left:0px; top:0px" ></div>
+			 <div id="info"> #{plotBean.plotInfo}</div>
 		    <script>
 		  //<![CDATA[
 		    var container, scene, camera, renderer, controls, stats;
