--- a/src/main/webapp/template.xhtml
+++ b/src/main/webapp/template.xhtml
@@ -8,7 +8,8 @@
 		<title>Chimicae</title>
 		<h:outputStylesheet name="css/style.css"  />
 		<script type="text/javascript"
-		  src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"/>		 
+		  src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"/>	
+		 <!--  <link rel="icon" href="https://raw.githubusercontent.com/HugoRedon/chimicae/master/src/main/webapp/images/favicon.ico" type="image/vnd.microsoft.icon"/> -->	 
 	</h:head> 
 	<h:body >
 	
