--- a/src/main/webapp/template.xhtml
+++ b/src/main/webapp/template.xhtml
@@ -9,7 +9,17 @@
 		<h:outputStylesheet name="css/style.css"  />
 		<script type="text/javascript"
 		  src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"/>	
-		 <!--  <link rel="icon" href="https://raw.githubusercontent.com/HugoRedon/chimicae/master/src/main/webapp/images/favicon.ico" type="image/vnd.microsoft.icon"/> -->	 
+		 <!--  <link rel="icon" href="https://raw.githubusercontent.com/HugoRedon/chimicae/master/src/main/webapp/images/favicon.ico" type="image/vnd.microsoft.icon"/> -->
+		 <script>
+		  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+		  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+		  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+		  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+		
+		  ga('create', 'UA-49465501-2', 'auto');
+		  ga('send', 'pageview');
+		
+		</script>	 
 	</h:head> 
 	<h:body >
 	
