--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -9,6 +9,6 @@
 	</head>
 	<FRAMESET cols="25%, 75%">		 
 	     <FRAME name="aside" src="welcome.xhtml"/>		     
-		 <FRAME name="main" src="compounds.xhtml"/>		
+		 <FRAME name="main" src="instructions.xhtml"/>		
 	</FRAMESET>
 </html>
