--- a/src/main/webapp/resources/emcomp/component.xhtml
+++ b/src/main/webapp/resources/emcomp/component.xhtml
@@ -8,7 +8,7 @@
     	<composite:attribute name="compound" type="termo.component.Compound" required="true"/>
         <composite:implementation>
             <h:panelGrid columns="2" cellpadding="10" cellspacing="2" border="0">
-                <h3>Componente </h3>
+                <h3>Compuesto </h3>
                 <h:selectOneMenu label="Componente" 
                                  value="#{cc.attrs.compound}" 
                                  converter="#{componentConverter}">
