--- a/src/main/webapp/substance.xhtml
+++ b/src/main/webapp/substance.xhtml
@@ -15,7 +15,7 @@
 				<emcomp:component compound="#{createSubstance.compound}"/>
 				<emcomp:phase phase="#{createSubstance.phase}"/>
 			</f:ajax>
-			<h:commandButton action="#{createSubstance.create()}" value="Aceptar" />
+			<h:commandButton action="#{createSubstance.create()}" value="Crear substancia" />
 			<h:messages />
 		</h:form>
 	</ui:define>
