--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -5,9 +5,9 @@
       xmlns:h="http://java.sun.com/jsf/html">
 
 	<head>	
-		<title>Chimicae</title>
+		<title>Chimicae</title>		 
 	</head>
-	<FRAMESET cols="25%, 75%">		 
+	<FRAMESET id='indexFrameset' cols="25%, 75%">		 
 	     <FRAME name="aside" src="welcome.xhtml"/>		     
 		 <FRAME name="main" src="instructions.xhtml"/>		
 	</FRAMESET>
