--- a/src/main/webapp/parameters.xhtml
+++ b/src/main/webapp/parameters.xhtml
@@ -2,25 +2,27 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:ui="http://java.sun.com/jsf/facelets"
       xmlns:f="http://java.sun.com/jsf/core"
-      xmlns:h="http://java.sun.com/jsf/html">
+      xmlns:h="http://java.sun.com/jsf/html"
+      xmlns:emcomp="http://xmlns.jcp.org/jsf/composite/emcomp"
+      xmlns:c="http://java.sun.com/jsp/jstl/core">
 
 	<ui:composition template="template.xhtml">
 		<ui:define name="content">
 		
 			<h2>Parámetros</h2>
 			<h:form>
-			<table>
-				<ui:repeat var="compoundi" value="#{createMixture.compoundAlphaFractions}">
-					<tr>
-						<ui:repeat var="compoundj" value="#{createMixture.compoundAlphaFractions}">
-						<td>
-							<h:outputText value="(#{compoundi.compound.name},#{compoundj.compound.name})"/>
-							<h:inputText value="#{setParameters.binariesForVDW(compoundi.compound,compoundj.compound).value}" />
-						</td>
-						</ui:repeat>
-					</tr>
-				</ui:repeat>
-			</table>
+			
+			<c:if test="#{setParameters.isVDWMixingRule()}">
+				<emcomp:mixtureParameters modelList ="#{setParameters.vanDerWaals}" name="k"/>
+			</c:if>
+			<c:if test="#{setParameters.isExcessGibbsBasedMixingRule()}">
+				<emcomp:mixtureParameters modelList="#{setParameters.activityModel_A}" name="A"/>
+				<emcomp:mixtureParameters modelList="#{setParameters.activityModel_B}" name="B"/>
+				<c:if test="#{setParameters.isWongSandlerMixingRule()}">
+					<emcomp:mixtureParameters modelList ="#{setParameters.wongSandler_b}" name="b"/>	
+				</c:if>							
+			</c:if>
+			
 			<h:commandButton action="#{setParameters.save()}" value="Aceptar"  />
 			</h:form>
 		</ui:define>
