--- a/src/main/webapp/resources/emcomp/bookExample.xhtml
+++ b/src/main/webapp/resources/emcomp/bookExample.xhtml
@@ -22,6 +22,8 @@
                             googleChartInfo="#{cc.attrs.bookexample.dataTable()}"/>
              	<h:graphicImage value="#{cc.attrs.bookexample.imagePath}" />
              	<emcomp:pointLineProperties bookexample="#{cc.attrs.bookexample}"/>
+             	<h:commandButton action="#{cc.attrs.bookexample.download(377,0.232668)}" value="Reporte 0.232668"/>
+             	<h:commandButton  action="#{cc.attrs.bookexample.download(377,0.2326765)}" value="Reporte 0.2326765"/>
              </h:panelGrid>
          </h:form>
 </composite:implementation>
