--- a/src/main/webapp/instructions.xhtml
+++ b/src/main/webapp/instructions.xhtml
@@ -6,8 +6,12 @@
 
 	<ui:composition template="template.xhtml">
 		<ui:define name="content">
+		<h:graphicImage value="/images/FQ.jpg" id="FQImage"/>
+		<h:panelGrid columns="2">
 			<h1>Instrucciones</h1>
 			
+		</h:panelGrid>
+		
 			<ul>
 				<li><h3>Selección de compuestos</h3>
 					<ul>
