--- a/src/main/webapp/template.xhtml
+++ b/src/main/webapp/template.xhtml
@@ -27,6 +27,8 @@
 		<ui:insert name="content">
 		
 		</ui:insert>
+		
+		<h:outputText value="Hugo Redon" id="hugoFooter" />
 	</h:body> 
 </html>
 
