--- a/src/main/webapp/webGLLinePlot.xhtml
+++ b/src/main/webapp/webGLLinePlot.xhtml
@@ -54,8 +54,8 @@
 		    var clock = new THREE.Clock();
 		    // custom global variables
 		    var MovingCube=[];
-		    var vaporAreaTemperatureLines=#{linesPlotsBean.vaporAreaTemperatureLines};
-	        var liquidAreaLines=#{linesPlotsBean.liquidAreaTemperatureLines};
+		    var vaporAreaTemperatureLines = #{linesPlotsBean.vaporAreaTemperatureLines};
+	        var liquidAreaLines = #{linesPlotsBean.liquidAreaTemperatureLines};
 		    var liquidLinejson= #{linesPlotsBean.liquidLineJson};
 		    var vaporLinejson = #{linesPlotsBean.vaporLineJson};
 		    var vaporAreaPressureLines =#{linesPlotsBean.vaporAreaPressureLines};
@@ -791,7 +791,7 @@
 			    var skyBoxGeometry = new THREE.BoxGeometry( 10000, 10000, 10000 );
 			    var skyBoxMaterial = new THREE.MeshBasicMaterial( { color: 0xeeeeee, side: THREE.BackSide } );
 			    var skyBox = new THREE.Mesh( skyBoxGeometry, skyBoxMaterial );
-			     scene.add(skyBox);
+			     //scene.add(skyBox);
 			    //scene.fog = new THREE.FogExp2( 0x9999ff, 0.00025 );
 			}
 
